cv downloading link added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     </header>
 
     <section class="name-section">
-      <name-screen></name-screen>
+      <name-screen>
+        <a 
+          class="button" 
+          download 
+          href="./files/Max Brokhman Front-end developer CV.docx"
+        >
+          Get CV
+        </a>
+      </name-screen>
     </section>
 
     <section class="intro">
