--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Front-end developer portfolio. Max Brokhman's portfolio web page">
     <link rel="preload" href="./fonts/Montserrat-Regular.ttf" as="font" crossorigin>
+    <link rel="preload" href="./fonts/Montserrat-Medium.ttf" as="font" crossorigin>
     <style>
       @font-face {
         font-family: "Montserrat";
         font-style: normal;
         font-weight: 400;
         src: local('Montserrat'), url('./fonts/Montserrat-Regular.ttf') format('opentype');
+      }
+      @font-face {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 500;
+        src: local('Montserrat'), url('./fonts/Montserrat-Medium.ttf') format('opentype');
       }
     </style>
     <link rel="stylesheet" href="./style.css">
