--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
         font-style: normal;
         font-weight: 400;
         src: local('Montserrat'), url('./fonts/Montserrat-Regular.ttf') format('opentype');
+        font-display: swap;
       }
       @font-face {
         font-family: "Montserrat";
         font-style: normal;
         font-weight: 500;
         src: local('Montserrat'), url('./fonts/Montserrat-Medium.ttf') format('opentype');
+        font-display: swap;
       }
     </style>
     <link rel="stylesheet" href="./style.css">
